cmake_minimum_required(VERSION 3.4)
project(weaver)
add_executable(weaver main.c)
find_package(PkgConfig)
pkg_check_modules(PKG_CONFIG_FOUND REQUIRED libavcodec libavformat libavutil libswscale)
include_directories(${PKG_CONFIG_FOUND_INCLUDE_DIRS})
link_directories(${PKG_CONFIG_FOUND_LIBRARY_DIRS})
link_libraries(${PKG_CONFIG_FOUND_LIBRARIES})
